teatracker/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teatracker
  labels:
    app: teatracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: teatracker
  template:
    metadata:
      labels:
        app: teatracker
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: teatracker-data
      - name: psql-tls-secrets
        secret:
          defaultMode: 416
          optional: true
          secretName: psql-client-secret
      containers:
      - name: teatracker
        image: cr.local.ongy.net/ongy/tea-tracker:v0.0.4
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - name: data
          mountPath: /data
        - mountPath: "/psql-tls-secrets"
          name: psql-tls-secrets
