teatracker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teatracker
spec:
  selector:
    app: teatracker
  ports:
  - name: http
    port: 80
    targetPort: 3000
